fixed a major threading bug in the code by adding signals and slots

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -72,6 +72,9 @@
       <height>111</height>
      </rect>
     </property>
+    <property name="centerOnScroll">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="connectButton">
     <property name="geometry">
